--- a/public/index.html
+++ b/public/index.html
@@ -6,76 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body ng-app="app">
+    <!-- <nav> -->
+    <nav class="navbar navbar-static-top navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Movie Search</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#!/movies">Search</a></li>
+          <li><a href="#">Favorites</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+      </div>
+    </nav>
+  <!-- /navbar -->
     <div class="container-fluid">
       <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-3">Travel Guide</h1>
-          <p class="lead">This apps will show you information for a travel destination.</p>
-        </div>
-      </div>
-        <form>
-          <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">City</label>
-            <div class="col-10">
-              <input class="form-control" type="search" id="example-search-input" placeholder="city, state, or zip">
-            </div>
-            <label for="example-date-input" class="col-2 col-form-label">Arrival</label>
-            <div class="col-10">
-              <input class="form-control" type="date" id="example-date-input">
-            </div>
-            <label for="example-date-input" class="col-2 col-form-label">Departure</label>
-            <div class="col-10">
-              <input class="form-control" type="date" id="example-date-input">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form>
-        </div>
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" href="#!/info">Info</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!/weather">Weather</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Social Media</a>
-          </li>
-        </ul>
-      <div ng-controller="weatherCtrl">
-        <p>{{$scope.info}}</p>
       </div>
     </div>
+      <div ng-view>
+      </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
-    <script src="scripts/directives/info.js" type="text/javascript"></script>
+    <script src="scripts/services/data.js" type="text/javascript"></script>
+    <script src="scripts/controllers/soundtrackCtrl.js" type="text/javascript"></script>
+    <script src="scripts/directives/soundtrack.js" type="text/javascript"></script>
+    <script src="scripts/controllers/movieCtrl.js" type="text/javascript"></script>
+    <script src="scripts/directives/movie.js" type="text/javascript"></script>
+    <script src="scripts/controllers/videoCtrl.js" type="text/javascript"></script>
+    <script src="scripts/directives/video.js" type="text/javascript"></script>
+    <script src="scripts/route-config.js"></script>
   </body>
 </html>
-<!--
-  <script src="vendor/angular.js"></script>
-  <script src="vendor/angular-route.js"></script>
-  <script src="scripts/app.js" type="text/javascript"></script>
-  <script src="scripts/services/data.js" type="text/javascript"></script>
-  <script src="scripts/controllers/recipesCtrl.js" type="text/javascript"></script>
-  <script src="scripts/directives/recipes.js" type="text/javascript"></script>
-  <script src="scripts/controllers/recipe-detailsCtrl.js" type="text/javascript"></script>
-  <script src="scripts/directives/recipe-details.js" type="text/javascript"></script>
-  TODO Add script tags for your JavaScript files here
-
-  <script src="scripts/route-config.js"></script>
-</body>
-
-</html>
- -->
