--- a/public/index.html
+++ b/public/index.html
@@ -13,34 +13,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
   </head>
+
   <body ng-app="app">
-    <!-- <nav> -->
-    <nav class="navbar navbar-static-top navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Movie Search</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#!/movies">Search</a></li>
-          <li><a href="#">Favorites</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-      </div>
-    </nav>
-  <!-- /navbar -->
-    <div class="container-fluid">
-      <div class="jumbotron jumbotron-fluid">
-      </div>
-    </div>
-      <div ng-view>
-      </div>
+
+      <div ng-view></div>
+      
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -57,6 +38,10 @@
     <script src="scripts/directives/movie.js" type="text/javascript"></script>
     <script src="scripts/controllers/videoCtrl.js" type="text/javascript"></script>
     <script src="scripts/directives/video.js" type="text/javascript"></script>
+    <script src="scripts/controllers/favoriteCtrl.js" type="text/javascript"></script>
+    <script src="scripts/directives/favorite.js" type="text/javascript"></script>
+    <script src="scripts/controllers/searchCtrl.js" type="text/javascript"></script>
+    <script src="scripts/directives/search.js" type="text/javascript"></script>
     <script src="scripts/route-config.js"></script>
   </body>
 </html>
