--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--     <script src="/scripts/app.bundle.js" type="text/javascript"></script> -->
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/services/data.js" type="text/javascript"></script>
     <script src="scripts/controllers/soundtrackCtrl.js" type="text/javascript"></script>
